# Susanna

./: .gitignore  README.md  RaspPi Pinout.xlsx  _devlogs.md  _errorlogs.md  app.py  app.qml  buttontest.py  config.db  config.json  credentials.json  currentTime.py  docker-compose.yaml  googlesheetstest.py  main.py  mm_config_copy.js  package.json  pyproject.toml  second.py  server.py  soundtest.py  startup.py
RPi/: GPIO.py
alarm/: alarm.py
backend/: .env.development  Dockerfile  pyproject.toml  quotes.db
backend/app/: main.py  run_lights.py  server.py  test_file.py  transistions.py
backend/app/RPi/: GPIO.py
backend/app/alarm/: alarm.py
backend/app/button/: button.py
backend/app/db/: alarms.db  daily_logs.db  insert_quotes.py
backend/app/display/: display.py
backend/app/encoder/: encoder.py
backend/app/lights/: lights.py
backend/app/logs/: logs.py
backend/app/models/: data_models.py  state_models.py
backend/app/mongo_runner/: mongo.py  mongo_config.json
backend/app/quotes/: quotes.py
backend/app/services/: alarm_service.py  application_state_service.py  data_service.py  gpio_service.py  lights_service.py  screen_service.py  sound_service.py  weather_service.py
backend/app/sqlite/: insert_quotes.py  sqlite.py
backend/hal/: button_driver.py
button/: button.py
frontend/: jsconfig.json  next.config.mjs  package-lock.json  package.json  quotes.jsx
frontend/electron/: main.js
sheets/: creds.json  g_calendar.py  saintquote.py  skey.json
susanna/: main.py  package-lock.json  server.py  token.json
templates/: index.html
(+34 files in other folders)
